# xed

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bimap.hpp  clickablelabel.cpp  clickablelabel.h  codeclabel.cpp  codeclabel.h  codecselector.cpp  codecselector.h  main.cpp  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  res.qrc  selector.cpp  statubar.cpp  statubar.h  statusbar.cpp  statusbar.h  textedit.cpp  textedit.h  vcpkg.json
resfiles/: ico.rc
src/: clickablelabel.cpp  main.cpp  mainwindow.h  menubar.cpp  menubar.h  selector.h  statusbar.h  tabwidget.cpp  tabwidget.h  textedit.cpp  textedit.h
